# canvas-quiz-generator

./: .gitignore  README.md  pyproject.toml
example/: config.json  task.html  task.md  task.txt
src/canvas_exam_generator/: __main__.py  config.py  logic.py
src/canvas_quiz_generator/: __main__.py  config.py  logic.py  qtiConverterApp.py
