[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-quiz-generator"
description = "Generate canvas quiz variants from a JSON file containing placeholders and answers."
keywords = ["Canvas", "LMS"]
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Education",
]
dependencies = [
    "pydantic"
]

[project.scripts]
canvas-quiz-generator = "canvas_quiz_generator.__main__:main"

[project.urls]
Repository = "https://github.com/Trigary/canvas-quiz-generator.git"
